# Macros

./: .gitignore  Cargo.toml  members.txt  plan.md
.github/workflows/: build-windows-exe.yml
clan-tracking-bot-windows/: config.json  members.txt
src/: automation.rs  background.rs  capture.rs  config.rs  discord.rs  main.rs  models.rs  ocr.rs  overlay.rs  ui.rs
