[package]
name = "clan_tracking_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
eframe = "0.30"
egui = "0.30"
image = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scrap = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi"
] }
